# Modalo

./: .gitignore  combile.bat  combile.sh  readme.md
config/: ABB.json  GROWATT.json  INVT.json  KSOLARE.json  RISHAB.json  RPI.json  SOFAR.json  SOLIS.json  TEST.json  default.conf  modalo.conf
includes/: modaloError.h  modaloParse.h
log/: modalo_1200_345_20231117T173843z.csv  modalo_1200_345_20231117T174010z.csv  modalo_1211_124_20231110T111043z.csv  modalo_1211_124_20231110T111500z.csv  modalo_1211_124_20231110T113000z.csv  modalo_1211_124_20231110T114500z.csv  modalo_1211_124_20231110T120000z.csv  modalo_1211_124_20231110T121500z.csv  modalo_1211_124_20231110T123000z.csv  modalo_1211_124_20231110T124500z.csv  modalo_1211_124_20231115T073943z.csv  modalo_1211_124_20231115T074500z.csv  modalo_1211_124_20231115T080435z.csv  modalo_1211_124_20231115T080552z.csv  modalo_1211_124_20231115T080751z.csv  modalo_1211_124_20231115T081500z.csv  modalo_1211_124_20231115T081559z.csv  modalo_1211_124_20231115T081946z.csv  modalo_1211_124_20231115T083000z.csv  modalo_1211_124_20231115T084500z.csv  modalo_1211_124_20231115T090000z.csv  modalo_1211_124_20231115T104819z.csv  modalo_1211_124_20231117T092305z.csv  modalo_1211_124_20231117T093000z.csv  modalo_1211_124_20231117T110047z.csv  modalo_1211_124_20231117T173843z.csv  modalo_1211_124_20231117T174010z.csv  modalo_1211_124_2023_11_10_05_22_31.csv  modalo_2023_11_06_20_18_14.csv
src/: CMakeLists.txt  main.c  modaloError.c  modaloParse.c
src/includes/: modaloError.h  modaloParse.h
